# smokyengine

./: CMakeLists.txt  LICENSE.md  README.md  level.xml
src/: Config.h  global.cpp  global.h  main.cpp
src/Components/: ComponentPool.h  Script.h  Sprite.h  Transform.h
src/Entity/: Entity.cpp  Entity.h
src/Scene/: Scene.cpp  Scene.hpp
src/ScriptAPI/Native/: ScriptAPI.cpp  ScriptAPI.h
src/ScriptAPI/Wrapper/: ScriptAPI.cpp  ScriptAPI.h
src/ScriptHandler/: ScriptHandler.cpp  ScriptHandler.hpp
